<resources>
    <string name="app_name">Float Assistant</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="media">Media</string>
    <string name="widget">Widget</string>
    <string name="set">Settings</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="cal">Calculator</string>
    <string name="note">Note</string>
    <string name="contacts">Contacts</string>
    <string name="search">Search</string>
    <string name="clean_histroy">clean histroy</string>
    <string name="default_time">"00:00"</string>
    <string name="note_select">"Select"</string>
    <string name="note_select_all">"SelectAll"</string>
    <string name="note_copy">"Copy"</string>
    <string name="note_plaster">"Plaster"</string>
    <string name="search_bar_hint">"Search"</string>
    <string name="search_all">"SelectAll"</string>
    <string name="search_copy_btn">"Copy"</string>
    <string name="search_copy_message">"Copy contacts' detail?"</string>
    <string name="search_cancel_btn">"Cancel"</string>
    <string name="copy_contacts_details">"Details of selected contacts will be copy to clipboard."</string>
    <string name="copy_contacts_details_finish">"Copy to clipboard finish!"</string>
    <string name="no_music_file">No audio file</string>
    <string name="no_video_file">No video file</string>
    <string name="close_float_window">Close float window, you will not to use it</string>
    <string name="error">Error</string>
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="del">DELETE</string>
    <string name="clear">CLR</string>
    <string name="div">\u00f7</string>
    <string name="mul">\u00d7</string>
    <string name="plus">+</string>
    <string name="minus">\u2212</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="enter">\u2193</string>
    <string name="sin">sin</string>
    <string name="sin_mathematical_value" translate="false">sin</string>
    <string name="cos">cos</string>
    <string name="cos_mathematical_value" translate="false">cos</string>
    <string name="tan">tan</string>
    <string name="tan_mathematical_value" translate="false">tan</string>
    <string name="pi">\u03c0</string>
    <string name="e">e</string>
    <string name="e_mathematical_value" translate="false">e</string>
    <string name="ln">ln</string>
    <string name="ln_mathematical_value" translate="false">ln</string>
    <string name="lg">log</string>
    <string name="lg_mathematical_value" translate="false">lg</string>
    <string name="leftParen">(</string>
    <string name="rightParen">)</string>
    <string name="sqrt">\u221a</string>
    <string name="power">^</string>
    <string name="factorial">!</string>
    <string name="basic">Basic panel</string>
    <string name="advanced">Advanced panel</string>
    <string name="clear_history">Clear history</string>
    <string name="text_copied_toast">Text copied.</string>
    <string name="number_too_long">Number is too long.</string>
    <string name="leftParenDesc">left parenthesis</string>
    <string name="rightParenDesc">right parenthesis</string>
    <string name="factorialDesc">factorial</string>
    <string name="lnDesc">natural logarithm</string>
    <string name="lgDesc">logarithm</string>
    <string name="sqrtDesc">square root</string>
    <string name="divDesc">divide</string>
    <string name="mulDesc">multiply</string>
    <string name="plusDesc">plus</string>
    <string name="minusDesc">minus</string>
    <string name="dotDesc">point</string>
    <string name="powerDesc">power</string>
    <string name="delDesc">delete</string>
    <string name="clearDesc">clear</string>
    <string name="tanDesc">tangent</string>
    <string name="sinDesc">sine</string>
    <string name="cosDesc">cosine</string>
    <string name="eDesc">Euler\'s number</string>
    <string name="piDesc">pi</string>
    <string name="equalDesc">equals</string>
    <string-array name="operators" translatable="false">
        <item>(</item>
        <item>)</item>
        <item>!</item>
        <item>ln</item>
        <item>log</item>
        <item>\u221a</item>
        <item>\u00f7</item>
        <item>\u00d7</item>
        <item>+</item>
        <item>\u2212</item>
        <item>.</item>
        <item>^</item>
        <item>tan</item>
        <item>sin</item>
        <item>cos</item>
        <item>\u03c0</item>
        <item>=</item>
    </string-array>
    <string-array name="operatorDescs">

        
        <item>left parenthesis</item>
        
        <item>right parenthesis</item>
        
        <item>factorial</item>
        
        <item>natural logarithm</item>
        
        <item>logarithm</item>
        
        <item>square root</item>
        
        <item>divided by</item>
        
        <item>multiplied by</item>
        
        <item>plus</item>
        
        <item>minus</item>
        
        <item>&#160;point&#160;</item>
        
        <item>power</item>
        
        <item>tangent</item>
        
        <item>sine</item>
        
        <item>cosine</item>
        
        <item>pi</item>
        
        <item>equals</item>
    </string-array>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_download_notification_prefix">Downloading: </string>
    <string name="umeng_common_pause_notification_prefix">Pause: </string>
    <string name="umeng_common_start_download_notification">Download start.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_download_failed">Download Failed! </string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="umeng_common_silent_download_finish">New version is ready,click to install it.</string>
    <string name="umeng_common_icon">icon</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="UMNewVersion">Latest version: </string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateSize">Update size: </string>
    <string name="UMTargetSize">Target size: </string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMIgnore">Ingore this</string>
    <string name="UMToast_IsUpdating">Updating....</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
    <string name="UMUpdateCheck">2.4.2.20140520</string>
</resources>