<?xml version="1.0" encoding="utf-8"?>

<!--
/*
* Copyright (C) 2011, The Android Open Source Project
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*     http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->

<com.yixi.window.view.CalculatorView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/simplePad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.yixi.window.view.CalculatorDisplay
            android:id="@+id/display"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            maxDigits="@integer/max_digits"
            android:background="#ffffffff" >

            <com.yixi.window.view.CalculatorEditText style="@style/display_style" />

            <com.yixi.window.view.CalculatorEditText style="@style/display_style" />
        </com.yixi.window.view.CalculatorDisplay>

        <ImageButton
            android:id="@+id/overflow_menu"
            android:layout_width="48dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dip"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_menu_overflow"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_function" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <!-- marginRight has to be 0 to catch border-touch -->

            <com.yixi.window.view.ColorButton
                android:id="@+id/clear"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="0dp"
                android:gravity="center"
                android:minWidth="89dip"
                android:text="@string/clear"
                android:textSize="15dp" />
            <!-- marginRight has to be 0 to catch border-touch -->

            <com.yixi.window.view.ColorButton
                android:id="@+id/del"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginRight="0dp"
                android:contentDescription="@string/delDesc"
                android:ellipsize="end"
                android:minWidth="89dip"
                android:text="@string/del"
                android:textSize="15dp" />
        </FrameLayout>
    </LinearLayout>

    <include
        android:id="@+id/calculator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/calculator_simple_pad" />

</com.yixi.window.view.CalculatorView>